2009-10-31  Chong Yidong  <cyd@stupidchicken.com>

	* frame.c (Fmake_frame_invisible, Fframe_visible_p): Doc fix
	(Bug#4827).

2009-10-30  Eli Zaretskii  <eliz@gnu.org>

	* s/msdos.h (SYSTEM_PURESIZE_EXTRA): Redefine to waste less pure
	space.

2009-10-30  Dan Nicolaescu  <dann@ics.uci.edu>

	* puresize.h (BASE_PURESIZE): Increase to 1470000.

	* lread.c (Fload): Purecopy the file name when building Vpreloaded_file_list.

2009-10-29  Jason Rumney  <jasonr@wanchan.jasonrumney.net>

	* w32fns.c (syms_of_w32fns): Change default value of
	w32-scroll-lock-modifier to nil.  (Bug#2827)

2009-10-26  Juanma Barranquero  <lekktu@gmail.com>

	* minibuf.c (Fall_completions): Fix typos in docstring.

2009-10-26  Andreas Schwab  <schwab@redhat.com>

	* puresize.h (PURESIZE_RATIO): Increase back to 10/6.

2009-10-26  Juanma Barranquero  <lekktu@gmail.com>

	* window.c (grow_mini_window): Comment out "delta >= 0" assertion.
	For delta < 0, skip check that only makes sense when the mini-window
	is going to be enlarged.  (Bug#4534)

2009-10-25  Chong Yidong  <cyd@stupidchicken.com>

	* keyboard.c (read_char_x_menu_prompt): Don't demand a prompt
	string in menu maps (Bug#4471).

2009-10-24  Chong Yidong  <cyd@stupidchicken.com>

	* nsfns.m (ns_set_name, ns_set_name_as_filename): Don't call
	FRAME_NS_VIEW on terminal frames (Bug#4765).

2009-10-24  Andreas Schwab  <schwab@linux-m68k.org>

	* dbusbind.c (xd_retrieve_arg): Handle DBUS_TYPE_INTnn and
	DBUS_TYPE_UINTnn separately to get proper sign extension.

	* dired.c (Ffile_attributes): Simplify now that FIXNUM_OVERFLOW_P
	can properly handle unsigned types.
	(make_uid, make_gid): Removed.

	* lisp.h (FIXNUM_OVERFLOW_P): Fix last change to handle unsigned
	types again.

	* sysdep.c (procfs_ttyname): Fix sprintf format to match argument type.
	(system_process_attributes): Likewise.

2009-10-24  Dan Nicolaescu  <dann@ics.uci.edu>

	* keymap.c (Fmake_sparse_keymap): Purecopy the name.
